--- a/style.css
+++ b/style.css
@@ -21,20 +21,98 @@ body {
     font-size: 16px;
     display: grid;
     place-items: center;
-    background-color: lightgray;
+    background-color: rgb(242,242,242)
 }
 
 main {
     display: grid;
-    gap: 3rem;
+    gap: 2rem;
+    width: 80%;
+    text-align: center;
+}
+
+.title {
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+
+.search-container {
+  background-color: white;
+  padding: 2rem;
+}
+
+.search-container > p {
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+  font-size: 1.2rem;
+  text-align: left;
+}
+
+.search-container > div {
+  display: flex;
+}
+
+input {
+  border: 1px solid rgb(206,212,218);
+  border-radius: 0.3rem;
+  padding: 0.4rem;
+  width: 100%;
+}
+
+input:focus {
+  outline: 1px solid rgb(132,203,98);
+}
+
+button {
+  border: none;
+  background-color: rgb(67,122,38);
+  color: white;
+  padding: 0.4rem;
 }
 
 .MP-Overview {
     display: flex;
-    gap: 1rem;
     background-color: white;
+    text-align: left;
+    width: 425px;
+    margin-inline: auto;
+}
+
+.MP-Overview > div {
+  padding: 1rem;
+}
+
+.MP-name {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.label {
+  font-weight: bold;
 }
 
 img[src=""] {
     display: none;
+}
+
+.subheading {
+  font-size: 1.7rem;
+  text-transform: uppercase;
+}
+
+.btn-container {
+  background-color: white;
+  padding: 1rem;
+  width: 425px;
+  margin-inline: auto;
+}
+
+.show-all-btn {
+  width: 100%;
+  padding: 1rem;
+  font-size: 1.3rem;
+}
+
+.hidden {
+  display: none;
 }
