--- a/css/MPList.css
+++ b/css/MPList.css
@@ -13,6 +13,7 @@ img,
 svg {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 
 body {
@@ -20,7 +21,8 @@ body {
     font-size: 16px;
     display: grid;
     place-items: center;
-    background-color: rgb(242,242,242)
+    background-color: rgb(242,242,242);
+    font-family: "Roboto", sans-serif;
 }
 
 main {
@@ -47,6 +49,7 @@ h3 {
   padding: 0.5rem;
   gap: 1rem;
   border: 1px solid #ccc;
+  align-items: end;
 }
 
 label {
@@ -102,11 +105,40 @@ button:hover {
 }
 .MP-Overview > div {
     padding: 1rem;
+    display: grid;
+    align-content: start;
+    gap: 1rem;
 }
   
 .MP-name {
     font-size: 1.4rem;
     margin-bottom: 0.5rem;
+    margin-top: 1rem;
     font-weight: bold;
   }
+
+@media (max-width: 1150px) {
+
+  .MP-grid {
+    grid-template-columns: 1fr 1fr
+  }
+
+}
+
+@media (max-width: 850px) {
+  main {
+    margin: 1rem;
+  }
+  
+  .MP-grid {
+    grid-template-columns: 1fr;
+  }
+
+  h3 {
+    font-size: 1rem;
+  }
+
+}
+
+
   
